--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@medplum/fhirtypes": "5.0.10",
     "@medplum/health-gorilla-core": "5.0.10",
     "@medplum/health-gorilla-react": "5.0.10",
+    "@medplum/mock": "5.0.10",
     "@medplum/react": "5.0.10",
     "@tabler/icons-react": "3.35.0",
     "@testing-library/dom": "10.4.1",
